[project]
name = "TEMPLATE"
version = "0.1.0"
description = "TEMPLATE"
dependencies = []
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
